# bazel-util

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE.txt  README.md  WORKSPACE.bazel
bazel/watchrun/src/rivetbazelutil/bazelwatchrun/: watchrun.py
black/: rules.bzl
buildifier/: workspace.bzl
cache/: rules.bzl
file/: workspace.bzl
file/test/bazel/: WORKSPACE.bazel
file/test/bazel/directory/: BUILD.bazel
file/test/bazel/untar/: BUILD.bazel
generate/: runner.sh.tpl
generate/args/: BUILD.bazel
generate/run/: BUILD.bazel
git/: changed_files.BUILD.bazel
ibazel/: rules.bzl  workspace.bzl
jsonschema/: jsonschema.BUILD.bazel
rules/: init.bzl  workspace.bzl
service/: rules.bzl
service/services/src/rivetbazelutil/services/: __main__.py
tools/: BUILD.bazel  deleted_packages.bazelrc  files.BUILD.bazel
util/: BUILD.bazel  rules.bzl
